--- a/translations/HDLBinst.pot
+++ b/translations/HDLBinst.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-07-20 23:04-0300\n"
+"POT-Creation-Date: 2021-07-22 22:23-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -444,7 +444,7 @@ msgid "Update HDL-Dump"
 msgstr ""
 
 #: HDL_Batch_installerMain.cpp:246
-msgid "Update MiniOPL"
+msgid "Update OPL Launcher"
 msgstr ""
 
 #: HDL_Batch_installerMain.cpp:240
