--- a/HDL-Batch-installer-SRC/Lang/es.po
+++ b/HDL-Batch-installer-SRC/Lang/es.po
@@ -5,12 +5,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: HDL Batch Installer v3.5.0 - Revision 0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-02-07 23:54-0300\n"
-"PO-Revision-Date: 2023-02-07 23:56-0300\n"
+"PO-Revision-Date: 2023-02-08 00:25-0300\n"
 "Last-Translator: \n"
-"Language-Team: \n"
+"Language-Team: El_isra\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
